# HUD-Driver-Display

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bitbucket-pipelines.yml  ddHostBuildconfig.json  docker-compose.yml  main.cpp  main.qml  qml.qrc
config/: ControlBus.dbc  SensorBus.dbc  TractiveBus.dbc  config.json
lib/rb23-canbus/Control/: ControlBus.dbc
lib/rb23-canbus/Sensor/: SensorBus.dbc
lib/rb23-canbus/Tractive/: TractiveBus.dbc
resources/: backend.cpp  backend.h  colourmap.cpp  colourmap.h  logformatter.cpp  logformatter.h
resources/modules/: BrakeIndicators.qml  CruiseControlSymbol.qml  DCL.qml  DCLVoltage.qml  HighVoltage.qml  InfoBar.qml  LV.qml  LaptimeBest.qml  LaptimeBestAndLast.qml  LaptimeDelta.qml  LaptimeLast.qml  LaptimeRolling.qml  LaptimeWithDelta.qml  LaunchControlSymbol.qml  LaunchControlWithText.qml  LongitudinalGs.qml  LongitudinalGsWithArrow.qml  PowerRegenSymbols.qml  RPMBar.qml  RPMWrapper.qml  RegenStrength.qml  SoC.qml  Speed.qml  StateOfCharge.qml  TemperatureAccuDigital.qml  TemperatureAllCoolants.qml  TemperatureBar.qml  TemperatureInverter.qml  TemperatureMotor.qml  TestHUDs.qml  TorqueSetting.qml  TractionControlSymbol.qml  TyreIndicators.qml  WarningLVBattery.qml  WarningSoCTemp.qml
resources/screens/: AccelerationVertical.qml  AutocrossVertical.qml  MainVertical.qml  MainWide.qml  SkidpadVertical.qml  TestVertical.qml
scripts/: CAN_socket_emulator.py  build.sh  gradient.csv  gradienttocsv.py  install_dependencies.sh  install_qt.sh  virtual_can_setup.sh
